<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Quiz Time</string>
    <string name="Name">Name</string>
    <string name="nameExample"><xliff:g id="name" example="Amy"></xliff:g></string>
    <string name="ques">Quiz Questions</string>
    <string name="q1">Q1. Solve (5+5)*2+10=?</string>
    <string name="q2">Q2. How many colors are there in a rainbow?</string>
    <string name="q3">Q3. What is India?</string>
    <string name="q4">Q4. Identify the animal</string>
    <string name="q5">Q5. Sun Rises in West</string>
    <string name="q1o1">15</string>
    <string name="q1o2">20</string>
    <string name="q1o3">30</string>
    <string name="q2o1">7</string>
    <string name="q2o2">8</string>
    <string name="q2o3">3</string>
    <string name="radio1">Country</string>
    <string name="radio2">State</string>
    <string name="q4o1">Dog</string>
    <string name="q4o2">Cat</string>
    <string name="q4o3">Frog</string>
    <string name="radio3">True</string>
    <string name="radio4">False</string>
    <string name="submit">Submit</string>
    <string name="text_ans">Colour</string>
    <string name="ques6">Q6. Identify the colour in the image below</string>
</resources>
