<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Name"
            android:inputType="textCapWords"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1e88e5"
            android:padding="8dp"
            android:text="@string/ques"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <TextView
            style="@style/questionTextStyle"
            android:text="@string/q1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/ques1_option1"
                style="@style/options"
                android:text="@string/q1o1" />

            <CheckBox
                android:id="@+id/ques1_option2"
                style="@style/options"
                android:text="@string/q1o2" />

            <CheckBox
                android:id="@+id/ques1_option3"
                style="@style/options"
                android:text="@string/q1o3" />


        </LinearLayout>

        <TextView
            style="@style/questionTextStyle"
            android:text="@string/q2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/ques2_option1"
                style="@style/options"
                android:text="@string/q2o1" />

            <CheckBox
                android:id="@+id/ques2_option2"
                style="@style/options"
                android:text="@string/q2o2" />

            <CheckBox
                android:id="@+id/ques2_option3"
                style="@style/options"
                android:text="@string/q2o3" />


        </LinearLayout>

        <TextView
            style="@style/questionTextStyle"
            android:text="@string/q3" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/country_radio_button"
                style="@style/options"
                android:text="@string/radio1"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/state_radio_button"
                style="@style/options"
                android:text="@string/radio2"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <TextView
            style="@style/questionTextStyle"
            android:text="@string/q4" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:src="@drawable/cat" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/ques4_option1"
                style="@style/options"
                android:text="@string/q4o1" />

            <CheckBox
                android:id="@+id/ques4_option2"
                style="@style/options"
                android:text="@string/q4o2" />

            <CheckBox
                android:id="@+id/ques4_option3"
                style="@style/options"
                android:text="@string/q4o3" />


        </LinearLayout>

        <TextView
            style="@style/questionTextStyle"
            android:text="@string/q5" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/true_radio_button"
                style="@style/options"
                android:text="@string/radio3"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/false_radio_button"
                style="@style/options"
                android:text="@string/radio4"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <TextView
            style="@style/questionTextStyle"
            android:text="@string/ques6" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/black" />

        <EditText
            android:id="@+id/text_ans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_ans"
            android:inputType="textCapWords"
            android:paddingBottom="16dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="submitQuiz"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>
